--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -151,6 +151,7 @@ public-repo-init: public-mwiki-user scratch
 	  public-repo-description $(PUBLIC_REPO)/.git/description
 	cd $(PUBLIC_REPO) && git add . && git commit -m 'Initial commit.' \
            && git config mwiki.wikihost $(WIKIHOST) \
+           && git config mwiki.makejobs $(MAKEJOBS) \
            && git config mwiki.htmldir http://$(WIKIHOST)/mwiki 
 
 	$(INSTALL) \
@@ -201,6 +202,7 @@ public-repo-export: public-repo-init
            && git config daemon.receivepack true \
            && git config mwiki.backend $(PUBLIC_REPO)/ \
            && git config mwiki.wikihost $(WIKIHOST) \
+           && git config mwiki.makejobs $(MAKEJOBS) \
            && git config mwiki.htmldir http://$(WIKIHOST)/mwiki 
 	cd $(PUBLIC_REPO) && git remote add frontend $(BARE_PUBLIC_REPO)
 
