--- a/Makefile.repo
+++ b/Makefile.repo
@@ -73,7 +73,7 @@ absrefs: $(patsubst %, %-absrefs.xml, $(MMLLAR))
 	  xsl/addabsrefs.xsl mml/$*.xmlvrf
 
 htmls: $(patsubst %, %.html, $(MMLLAR))
-	.perl/mkmmlindex.pl -ghttp://$(WIKIHOST):1234/ -p$(GITPROJECT) mml/*.hdr > html/index.html
+	.perl/mkmmlindex.pl -ghttp://$(WIKIHOST):1234/ -p$(GITPROJECT) mml/*.hdr > html/00INDEX.html
 
 %.html: %-absrefs.xml %.hdr
 	@$(ECHO) $(html-tag) $*
