--- a/Makefile.repo
+++ b/Makefile.repo
@@ -1,5 +1,8 @@
 # -*- mode: makefile; -*-
-MMLLAR=$(shell cat $(MIZFILES)/mml.lar) tarski
+MMLMIZALL=$(shell ls *.miz)
+MMLMIZSTD=$(filter-out hidden, $(MMLMIZALL))
+MMLLAR=$(patsubst %.miz, %, $(MMLMIZSTD))
+# MMLLAR=$(shell cat $(MIZFILES)/mml.lar) tarski
 DEP-MAKEFILES = $(patsubst %, %.dep, $(MMLLAR))
 MIZ = $(patsubst %, %.miz, $(MMLLAR))
 VPATH = mml
