Factor out edit page CSS.

--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -49,7 +49,7 @@ REPOBIN=$(PUBLIC_REPO)/bin
 MIZBIN=$(MIZFILES)/bin
 MAKEJOBS=1
 SHEETS=addabsrefs miz evl2dep
-CSS=article index
+CSS=article index edit
 JAVASCRIPT=article
 PERLSCRIPTS=mkxmlhead mkmmlindex duplicates
 PERLMODULES=mizar
