--- a/Makefile.repo
+++ b/Makefile.repo
@@ -76,7 +76,7 @@ absrefs: $(patsubst %, %-absrefs.xml, $(MMLLAR))
 	  xsl/addabsrefs.xsl mml/$*.xmlvrf
 
 htmls: $(patsubst %, %.html, $(MMLLAR))
-	.perl/mkmmlindex.pl -ghttp://$(WIKIHOST):1234/ -mhttp://$(WIKIHOST)/cgi-bin/mwiki/mwiki.cgi -p$(GITPROJECT) mml/*.hdr > html/index.html
+	.perl/mkmmlindex.pl -ghttp://$(WIKIHOST):1234/ -mhttp://$(WIKIHOST)/cgi-bin/mwiki/mwiki.cgi -p$(GITPROJECT) mml/*.hdr > html/frontpage.html
 
 %.html: %-absrefs.xml %.hdr
 	@$(ECHO) $(html-tag) $*
