--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -83,14 +83,17 @@ public-repos: public-repo-init public-sandbox public-compiled public-repo-export
 	chgrp -R $(PUBLIC_MWIKI_USER) $(PUBLIC_REPOS_BASE)
 
 
-scratch-mizfiles:
+scratch-directories:
+	mkdir -p $(SCRATCH_BASE)
+	cd $(SCRATCH_BASE)
+	mkdir mml prel bin xsl html .perl
+
+scratch-mizfiles: scratch-directories
 	# .miz
-	mkdir -p $(SCRATCH_BASE)/mml
 	for article in hidden tarski $(INITIAL_SEGMENT); do \
 	  $(INSTALL) --preserve-timestamps --mode=644 $(MIZFILES)/mml/$$article.miz $(SCRATCH_BASE)/mml; \
 	done
 	# prel
-	mkdir -p $(SCRATCH_BASE)/prel
 	cp -p $(MIZFILES)/prel/h/hidden.* $(SCRATCH_BASE)/prel
 	cp -p $(MIZFILES)/prel/*/*.dre $(SCRATCH_BASE)/prel
 	chown -R $(PUBLIC_MWIKI_USER) $(SCRATCH_BASE)/prel
@@ -100,27 +103,22 @@ scratch-mizfiles:
 	done
 	head -n $(NUM_ARTICLES) $(MIZFILES)/mml.lar > $(SCRATCH_BASE)/mml.lar
 	# bin
-	mkdir -p $(SCRATCH_BASE)/bin
 	for binary in $(MIZBINARIES); do \
 	  $(INSTALL) --mode 755 $(MIZBIN)/$$binary $(SCRATCH_BASE)/bin/$$binary; \
 	done
 	# xsl
-	mkdir -p $(SCRATCH_BASE)/xsl
 	for sheet in $(SHEETS); do \
 	  $(INSTALL) --mode 644 $(XSL4MIZ)/$$sheet.xsl $(SCRATCH_BASE)/xsl; \
 	done
 	# css
-	mkdir -p $(SCRATCH_BASE)/html
 	for sheet in $(CSS); do \
 	  $(INSTALL) --mode 644 $$sheet.css $(SCRATCH_BASE)/html; \
 	done
 	# javascript
-	mkdir -p $(SCRATCH_BASE)/html
 	for jsfile in $(JAVASCRIPT); do \
 	  $(INSTALL) --mode 644 $$jsfile.js $(SCRATCH_BASE)/html; \
 	done
 	# perl
-	mkdir -p $(SCRATCH_BASE)/.perl
 	for perlfile in $(PERLMODULES); do \
 	  $(INSTALL) --mode 644 $$perlfile.pm $(SCRATCH_BASE)/.perl; \
 	done
