--- a/Makefile.coqrepo
+++ b/Makefile.coqrepo
@@ -8,10 +8,20 @@
 
 export SHELL=/bin/bash
 ECHO = /bin/echo
+
+# anything matching .v has to compile;
+# if you do not want it to compile, rename it to .broken, or whatever
+# there might be more liberal repo policies
 COQSOURCES=$(shell find -name *.v)
 COQDEPEND := $(COQSOURCES:.v=.d)
 COQOBJECTS := $(COQSOURCES:.v=.vo)
+COQGLOBS := $(COQSOURCES:.v=.glob)
 
+# File where coqc stores the references to global symbols
+GLOBFILE = $(SRCDIR)/.glob
+
+
+# the crazy -R directive: we have to collect all toplevel directories - that seems to be enough
 COQMAP=$(shell ls -d */ | sed -e 's/\(.*\)\//-R \1 \1 /')
 
 dep-tag = "    DEP "
@@ -31,6 +41,31 @@ allvo: $(COQOBJECTS)
 	$(ECHO) $(verify-tag) $<; \
 	GLOB="$(<:.v=.glob)"; \
 	coqc  -dump-glob "$${GLOB}" $(COQMAP) $<
+
+
+##TODO: remove the brain-damaged "constructive" requirement that all
+##      files have to be processed at once (otherwise we do not trust
+##      that they exist and don't link to them), using Hugo's patch
+##      (switch to newer Coq probably needed for this)
+allhtml :  $(COQGLOBS)
+	mkdir -p doc/html
+	@coqdoc -utf8 --toc -s -t "C-CoRN Documentation" $(COQMAP) --multi-index  -d doc/html $(COQSOURCES) 
+
+clean : depclean objclean globclean
+
+
+
+depclean : 
+	@rm -f $(COQDEPEND) 
+
+objclean : 
+	@rm -f $(COQOBJECTS)
+
+globclean : 
+	@rm -f $(COQGLOBS)
+
+doclean :
+	@rm -rf doc
 
 
 -include $(COQDEPEND)
