--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -38,13 +38,13 @@
 #
 # - HEAD: default /usr/bin/head.  See description of INSTALL variable.
 
-PUBLIC_REPO_NAME=mwiki-public
+REPO_NAME=mwiki
 SCRATCH_BASE=$(REPOS_BASE)/scratch
 PUBLIC_REPOS_BASE=$(REPOS_BASE)/public
-PUBLIC_REPO=$(REPOS_BASE)/public/mwiki
+PUBLIC_REPO=$(REPOS_BASE)/public/$(REPO_NAME)
 PUBLIC_SANDBOX=$(PUBLIC_REPOS_BASE)/sandbox
 PUBLIC_COMPILED_REPO=$(PUBLIC_REPOS_BASE)/compiled
-BARE_PUBLIC_REPO=$(PUBLIC_REPOS_BASE)/mwiki.git
+BARE_PUBLIC_REPO=$(PUBLIC_REPOS_BASE)/$(REPO_NAME).git
 REPOBIN=$(PUBLIC_REPO)/bin
 MIZBIN=$(MIZFILES)/bin
 MAKEJOBS=1
@@ -133,7 +133,7 @@ scratch-deps: scratch-mizfiles
 	@$(MAKE) -C $(SCRATCH_BASE)/mml -j $(MAKEJOBS) evls deps MIZFILES=$(SCRATCH_BASE) PATH=$(SCRATCH_BASE)/bin:$(PATH)
 
 scratch-html: scratch-deps
-	@$(MAKE) -C $(SCRATCH_BASE) -j $(MAKEJOBS) xmlvrfs prels absrefs htmls MIZFILES=$(SCRATCH_BASE) PATH=$(SCRATCH_BASE)/bin:$(PATH) WIKIHOST=$(WIKIHOST) GITPROJECT=mwiki.git
+	@$(MAKE) -C $(SCRATCH_BASE) -j $(MAKEJOBS) xmlvrfs prels absrefs htmls MIZFILES=$(SCRATCH_BASE) PATH=$(SCRATCH_BASE)/bin:$(PATH) WIKIHOST=$(WIKIHOST) GITPROJECT=$(REPO_NAME).git
 
 scratch: scratch-html
 
@@ -156,7 +156,7 @@ public-repo-init: public-mwiki-user scratch
 	cd $(PUBLIC_REPO) && git add . && git commit -m 'Initial commit.' \
            && git config mwiki.wikihost $(WIKIHOST) \
            && git config mwiki.makejobs $(MAKEJOBS) \
-           && git config mwiki.htmldir http://$(WIKIHOST)/mwiki 
+           && git config mwiki.htmldir http://$(WIKIHOST)/$(REPO_NAME)
 
 	$(INSTALL) \
 	  --mode 755 \
@@ -206,12 +206,12 @@ public-repo-export: public-repo-init
            && git config mwiki.backend $(PUBLIC_REPO)/ \
            && git config mwiki.wikihost $(WIKIHOST) \
            && git config mwiki.makejobs $(MAKEJOBS) \
-           && git config mwiki.htmldir http://$(WIKIHOST)/mwiki 
+           && git config mwiki.htmldir http://$(WIKIHOST)/$(REPO_NAME) 
 	cd $(PUBLIC_REPO) && git remote add frontend $(BARE_PUBLIC_REPO)
 
 
 gitweb: public-repo-export 
-	ln -s $(BARE_PUBLIC_REPO) $(GITWEB_ROOT)/mwiki.git
+	ln -s $(BARE_PUBLIC_REPO) $(GITWEB_ROOT)/$(REPO_NAME).git
 	$(INSTALL) -m 644 gitweb $(APACHE_ROOT)/etc/apache2/sites-available/gitweb
 	cd $(APACHE_ROOT)/etc/apache2/sites-enabled \
 	  && ln -s ../sites-available/gitweb gitweb
@@ -222,21 +222,21 @@ mwiki: public-repos
 	$(INSTALL) -m 755 \
            --owner=$(PUBLIC_MWIKI_USER) --group=$(PUBLIC_MWIKI_USER) mwiki.cgi \
 	  $(CGILIB)/mwiki/mwiki.cgi
-	$(INSTALL) -m 644 mwiki.apacheconf \
-	  $(APACHE_ROOT)/etc/apache2/sites-available/mwiki
+	$(INSTALL) -m 644 $(REPO_NAME).apacheconf \
+	  $(APACHE_ROOT)/etc/apache2/sites-available/$(REPO_NAME)
 	cd $(APACHE_ROOT)/etc/apache2/sites-enabled \
-	  && ln -s ../sites-available/mwiki mwiki
+	  && ln -s ../sites-available/$(REPO_NAME) $(REPO_NAME)
 	apache2ctl restart
 
 clean:
 	rm -Rf $(REPOS_BASE)
-	rm -f $(GITWEB_ROOT)/mwiki.git
+	rm -f $(GITWEB_ROOT)/$(REPO_NAME).git
 	# -killall git-daemon
 	# deluser $(PUBLIC_MWIKI_USER) \
 	#   || echo "user $(PUBLIC_MWIKI_USER) doesn't exist"
 	rm -f $(APACHE_ROOT)/etc/apache2/sites-available/gitweb
-	rm -f $(APACHE_ROOT)/etc/apache2/sites-enabled/mwiki
-	rm -f $(APACHE_ROOT)/etc/apache2/sites-available/mwiki
+	rm -f $(APACHE_ROOT)/etc/apache2/sites-enabled/$(REPO_NAME)
+	rm -f $(APACHE_ROOT)/etc/apache2/sites-available/$(REPO_NAME)
 	rm -f $(APACHE_ROOT)/etc/apache2/sites-enabled/gitweb
 	rm -f $(APACHE_ROOT)/var/log/apache2/gitweb.error.log
 	rm -f $(APACHE_ROOT)/var/log/apache2/gitweb.access.log
