--- a/apacheconf.in
+++ b/apacheconf.in
@@ -1,7 +1,7 @@
-Alias /@@REPO_NAME@@ "@@PUBLIC_COMPILED_REPO@@/html"
-<Directory /@@REPO_NAME@@>
+Alias /##REPO_NAME## "##PUBLIC_COMPILED_REPO##/html"
+<Directory /##REPO_NAME##>
   Options Indexes FollowSymLinks MultiViews
-  DirectoryIndex @@REPO_DIR_INDEX@@
+  DirectoryIndex ##REPO_DIR_INDEX##
   AllowOverride None
   Order allow,deny
   allow from all
